[package]
name = "marshal-rs"
version = "1.1.0"
authors = ["savannstm <savannstm@gmail.com>"]
edition = "2021"
rust-version = "1.63.0"
description = "Blazingly fast Ruby-lang's Marshal implementation in Rust."
readme = "README.md"
repository = "https://github.com/savannstm/marshal-rs"
documentation = "https://docs.rs/marshal-rs/"
license-file = "LICENSE.md"
keywords = ["marshal", "ruby", "serialize", "deserialize"]

[dependencies]
bitflags = "2.9.1"
encoding_rs = "0.8.35"
gxhash = "3.5.0"
indexmap = { version = "2.10.0", features = ["serde"] }
num-bigint = "0.4.6"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
strum_macros = "0.26.4"
thiserror = "2.0.12"

# Force using 0.15.0 to avoid breaking 1.63 MSRV
hashbrown = "=0.15.0"
