[package]
name = "marshal-rs"
version = "2.0.0"
authors = ["savannstm <savannstm@gmail.com>"]
edition = "2021"
rust-version = "1.82.0"
description = "Blazingly fast Ruby-lang's Marshal implementation in Rust."
readme = "README.md"
repository = "https://github.com/savannstm/marshal-rs"
documentation = "https://docs.rs/marshal-rs/"
license-file = "LICENSE.md"
keywords = ["marshal", "ruby", "serialize", "deserialize"]

[dependencies]
bitflags = "2.10.0"
encoding_rs = "0.8.35"
gxhash = { version = "3.5.0", features = ["deterministic"] }
indexmap = { version = "2.12.1", features = ["serde"] }
num-bigint = "0.4.6"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
strum_macros = "0.27.2"
thiserror = "2.0.17"
